Put scrollbar on main content, with navbar above it. Instead of having navbar be fixed in front of the main content. Fixes issues with anchor positioning

--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -71,10 +71,6 @@
     padding-top: 2rem;
     padding-left: 2rem;
   }
-
-  .navbar.is-fixed-top {
-    padding-left: 20rem;
-  }
 }
 
 @media(max-width: 1024px) {
